--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <input id="valor_b" type="number" />
         <input id="valor_c" type="number" />
       </div>
+      <div id="bton">
+        <button id="button" onclick="Calc()">Calcular</button>
+      </div>
+      <p id="RES"></p>
     </div>
 
     <script src="script.js"></script>
