--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <p id="RES"></p>
     </div>
-
+    <footer><p>&copy;BSCC</p></footer>
     <script src="script.js"></script>
   </body>
 </html>
