adc casa decimal

--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
         <input id="valor_b" type="number" />
         <input id="valor_c" type="number" />
       </div>
+      <div>
+        <div id="txt5">Casas Decimais</div>
+        <input id="dec" type="number" />
+        <p id="obs">*OBS: Utilizar valore entre 1 e 50 para casas decimais </p>
+      </div>
       <div id="bton">
         <button id="button" onclick="Calc()">Calcular</button>
       </div>
       <p id="RES"></p>
     </div>
-    <footer><p>&copy;BSCC</p></footer>
+    <footer><p>&copy; BSCC</p></footer>
     <script src="script.js"></script>
   </body>
 </html>
