--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
   <body>
     <header><h1>Calculadora Bhaskara</h1></header>
     <div id="container">
-      <p id="txt1">Considerar a seguinte forma:</p>
-      <img src="eq-2grau.png" alt="" />
+      <div id="Intro">
+        <p id="txt1">Considerar a seguinte forma:</p>
+        <img src="eq-2grau.png" alt="" />
+      </div>
+
+      <div id="Variaveis"></div>
+    </div>
+    <!--------
       <div id="txt2">Valor de a</div>
       <div id="txt3">Valor de b</div>
       <div id="txt4">Valor de c</div>
@@ -23,13 +29,16 @@
       <div>
         <div id="txt5">Casas Decimais</div>
         <input id="dec" type="number" />
-        <p id="obs">*OBS: Utilizar valore entre 1 e 50 para casas decimais </p>
+        <p id="obs">*OBS: Utilizar valore entre 1 e 50 para casas decimais</p>
       </div>
+
       <div id="bton">
         <button id="button" onclick="Calc()">Calcular</button>
       </div>
+
+
       <p id="RES"></p>
-    </div>
+    </div>--->
     <footer><p>&copy; BSCC</p></footer>
     <script src="script.js"></script>
   </body>
