--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
       <div class="texto_valores">Valor de c</div>
       <input class="valor_c" type="number" />
 
-      <div class="texto_valores">Casas Decimais</div>
+      <div class="texto_valores casa_decimais">Casas Decimais</div>
       <input class="dec" type="number" />
 
-      <p class="obs">*OBS: Utilizar valore entre 1 e 50 para casas decimais</p>
+      <p class="obs texto_valores">
+        *OBS: Utilizar valore entre 1 e 50 para casas decimais
+      </p>
 
       <div class="bton">
-        <button class="button" onclick="Calc()">Calcular</button>
+        <button class="button texto_valores" onclick="Calc()">Calcular</button>
       </div>
 
       <p id="RES"></p>
